# clutch

./: .gitignore  BACH_EINHÄNGEPUNKTE.md  BACH_INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  claude_code_test.py  demo.py  live_test.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
clutch/: __init__.py  bordcomputer.py  fahrer.py  fahrschule.py  fahrtenbuch.py  kupplung.py  motorblock.py  strecke.py  tacho.py  tankuhr.py
clutch/patterns/: __init__.py  hybrid.py  kolonne.py  schwarm.py  team.py
config/: fitness_criteria.json  getriebe.json  kupplung.json  strecken.json
kupplung/: __init__.py  bordcomputer.py  fahrer.py  fahrschule.py  fahrtenbuch.py  gas_bremse.py  getriebe.py  kupplung.py  motorblock.py  tacho.py  tankuhr.py
kupplung/patterns/: __init__.py  hybrid.py  kolonne.py  team.py
tests/: test_clutch.py  test_kupplung.py  test_learning.py  test_patterns.py  test_route.py
