[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clutch"
version = "0.3.0"
description = "Provider-neutral LLM orchestration engine with auto-learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lukas Geiger"},
]
keywords = ["llm", "orchestration", "ai", "multi-provider", "claude", "gemini", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/ellmos-ai/clutch"
Repository = "https://github.com/ellmos-ai/clutch"
Issues = "https://github.com/ellmos-ai/clutch/issues"

[tool.setuptools.packages.find]
include = ["kupplung*"]
